# Minesweeper-C-Console-App

./: CMakeLists.txt  main.c  minesweeper_functions.c  minesweeper_functions.h
lib/haywardstd/: CMakeLists.txt  haywardstd.c  haywardstd.h
